Correction des erreurs : version mobile page About

--- a/src/sass/Layout/layout.scss
+++ b/src/sass/Layout/layout.scss
@@ -18,6 +18,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 1% 5%;
+
   .header__logo {
     width: 15%;
     min-width: 6rem;
@@ -36,6 +37,9 @@
   a {
     text-decoration: none;
     color: variables.$secondary-color;
+    @media (max-width: 768px) {
+      text-transform: uppercase;
+    }
 
     &:visited {
       color: variables.$secondary-color;
@@ -69,12 +73,14 @@
   height: 13rem;
   padding: 0;
   margin-top: 20px;
+
   .footer__logo {
     margin-bottom: 1.5rem;
     margin-top: 2rem;
     width: 10%;
     min-width: 5rem;
   }
+
   .footer__text {
     color: white;
     font-family: variables.$font-stack;
@@ -88,5 +94,8 @@
       font-size: 12px;
       text-align: center;
     }
+    margin-left: -1rem;
+    margin-right: -1rem;
+    width: auto;
   }
 }
